# FloraLink

./: .gitignore  CMakeLists.txt  FloraLink.code-workspace  README.md
main/: CMakeLists.txt  Kconfig.projbuild  _mqtthub.c  _mqtthub.h  _mqttnode.c  _mqttnode.h  blink.c  blink.h  blink_config.c  blink_config.h  distance.c  distance.h  idf_component.yml  misc.c  misc.h  modemanager.c  modemanager.h  monitor.c  monitor.h  nodeio.c  nodeio.h  nodeioprotocol.h  samplenodemsg.json  tasks.c  webserver.c  websockclient.c  websockclient.h  websockserver.c  websockserver.h  wifi_setup.c  wifi_setup.h
main/webserver/: webserver.c  webserver.h
test/: testnode.py
